...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1523"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Journal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyd-sP-nBy">
                                                <rect key="frame" x="291.33333333333326" y="40" width="98.666666666666686" height="24"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="border5" translatesAutoresizingMaskIntoConstraints="NO" id="8iQ-35-RXg">
                                                <rect key="frame" x="20" y="30" width="120" height="50"/>
                                                <constraints>
...
                                                                    <constraint firstAttribute="width" constant="140" id="cba-Tg-Utr"/>
                                                                </constraints>
                                                                <state key="normal" title="selectPhoto" image="addButton"/>
                                                                <connections>
                                                                    <action selector="selectPhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FSj-3b-CMz"/>
...
                                                                    <constraint firstAttribute="width" constant="40" id="YpU-JF-Dqw"/>
                                                                </constraints>
                                                                <state key="normal" title="Button" image="addButton"/>
                                                                <connections>
                                                                    <action selector="selectMusic:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Aj-N7-get"/>
...
                                                        <rect key="frame" x="0.0" y="1035" width="375" height="55"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghy-gI-cSB">
                                                                <rect key="frame" x="5" y="13" width="44" height="25"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="YouTube" id="b5N-GW-NEh">
                        <barButtonItem key="rightBarButtonItem" title="Save Video" id="5h4-Vb-bLS">
                            <connections>
                                <action selector="SaveVideo:" destination="5Ox-0b-liZ" id="4XU-D6-xdG"/>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="My Jounal" id="xkk-yj-dUa">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aIP-Ov-iPG">
                            <connections>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="My Journal" id="zER-Gy-P4d">
                        <barButtonItem key="leftBarButtonItem" title="Home" id="Fka-he-49c"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Jvy-ae-tBR"/>
                    </navigationItem>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Main" id="nLu-la-HUD">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Zkp-cp-aCh">
                            <connections>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="okO-7r-OyH" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favourites" image="heart" id="rGX-22-hIB"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TGf-1d-hNS">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wPm-vR-mpb" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Places" image="location-pointer" id="xZN-CA-6uQ"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cKd-Hr-Zct">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iA6-Y1-Wyt">
                                        <rect key="frame" x="8" y="46" width="137" height="30"/>
                                        <state key="normal" title="Export"/>
                                        <connections>
                                            <action selector="exportAction:" destination="3kV-eU-QMu" eventType="touchUpInside" id="DNh-uL-bQr"/>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Preview" id="nDE-bG-qXW">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="hMY-fy-uQ0">
                            <connections>
                                <action selector="saveAction:" destination="qrK-6l-vDo" id="F51-ef-cE8"/>
...
