...
                </button>
                <placeholder placeholderIdentifier="IBFirstResponder" id="v4I-Bq-xDb" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="pna-QL-WUY">
                    <rect key="frame" x="0.0" y="0.0" width="56" height="42"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                    <state key="normal" title="Back"/>
                </button>
            </objects>
            <point key="canvasLocation" x="31.199999999999999" y="37.331334332833585"/>
        </scene>
    </scenes>
    <resources>
...
